--- a/pom.xml
+++ b/pom.xml
@@ -22,13 +22,20 @@
 		
   </dependencies>
   
-  <build>
-		<plugins>
-			<plugin>  
- <groupId>org.apache.tomcat.maven</groupId>  
- <artifactId>tomcat8-maven-plugin</artifactId>  
- <version>2.2</version>     
-</plugin>  
-		</plugins>
-	</build>
+ <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>3.0.1</version>
+                <executions>
+                    <execution>
+                        <id>copy-dependencies</id>
+                        <phase>package</phase>
+                        <goals><goal>copy-dependencies</goal></goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
