--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,9 @@
     <groupId>com.server.websocket</groupId>
     <version>1.0-SNAPSHOT</version>
     <artifactId>helloworld</artifactId>
- 
+  <properties>
+    <tomcat.version>8.5.23</tomcat.version>
+  </properties>
   	<dependencies>
 <dependency>
     <groupId>com.google.code.gson</groupId>
