--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,12 @@
     <version>1.1</version>
     <scope>provided</scope>
 </dependency>
+<dependency>
+    <groupId>org.postgresql</groupId>
+    <artifactId>postgresql</artifactId>
+    <version>9.3-1101-jdbc4</version>
+</dependency>
+
 		<dependency>
         <groupId>org.apache.tomcat.embed</groupId>
         <artifactId>tomcat-embed-core</artifactId>
