--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,11 @@
     <artifactId>gson</artifactId>
     <version>2.3.1</version>
 </dependency>
+<dependency>
+    <groupId>org.json</groupId>
+    <artifactId>json</artifactId>
+    <version>20180813</version>
+</dependency>
 
 <dependency>
     <groupId>javax.websocket</groupId>
