--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<web-app xmlns="http://java.sun.com/xml/ns/javaee"
-	 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	 xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID"
 	 version="3.0">
     <session-config>
         <session-timeout>
@@ -11,6 +9,29 @@
     </session-config>
     
     
+  <servlet>
+    <description></description>
+    <display-name>ExcelSample</display-name>
+    <servlet-name>ExcelSample</servlet-name>
+    <servlet-class>com.excel.Sample.Servlet.ExcelSample</servlet-class>
+  </servlet>
+  <servlet>
+  	<description>
+  	</description>
+  	<display-name>
+  	FormSample</display-name>
+  	<servlet-name>FormSample</servlet-name>
+  	<servlet-class>
+  	com.excel.Sample.Servlet.FormSample</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ExcelSample</servlet-name>
+    <url-pattern>/ExcelSample</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>FormSample</servlet-name>
+  	<url-pattern>/FormSample</url-pattern>
+  </servlet-mapping>
     
     
 </web-app>
