--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,13 @@
 	<systemPath>${basedir}/lib/excelannotation.jar</systemPath>
 </dependency>
 <dependency>
+	<groupId>com.excel.Sample.ExcelAnn</groupId>
+	<artifactId>example-app</artifactId>
+	<version>1.0</version>
+	<scope>system</scope>
+	<systemPath>${basedir}/lib/formannotation.jar</systemPath>
+</dependency>
+<dependency>
     <groupId>commons-fileupload</groupId>
     <artifactId>commons-fileupload</artifactId>
     <version>1.3</version>
