--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,12 @@
 
 <dependency>
     <groupId>org.hibernate</groupId>
+    <artifactId>hibernate-annotations</artifactId>
+    <version>3.5.6-Final</version>
+</dependency>
+
+<dependency>
+    <groupId>org.hibernate</groupId>
     <artifactId>hibernate-core</artifactId>
     <version>5.4.2.Final</version>
 </dependency>
