--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,13 @@
   	<dependencies>
 
 <dependency>
+    <groupId>javax.servlet</groupId>
+    <artifactId>servlet-api</artifactId>
+    <version>3.0-alpha-1</version>
+    <scope>provided</scope>
+</dependency>
+
+<dependency>
 	<groupId>com.excel.Sample</groupId>
 	<artifactId>example-app</artifactId>
 	<version>1.0</version>
