--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,11 @@
     <tomcat.version>8.5.23</tomcat.version>
   </properties>
   	<dependencies>
-
+<dependency>
+	<groupId>commons-logging</groupId>
+	<artifactId>commons-logging</artifactId>
+	<version>1.2</version>
+</dependency>
 <dependency>
     <groupId>javax.servlet</groupId>
     <artifactId>servlet-api</artifactId>
