--- a/pom.xml
+++ b/pom.xml
@@ -15,12 +15,14 @@
 	<artifactId>commons-logging</artifactId>
 	<version>1.2</version>
 </dependency>
+
 <dependency>
     <groupId>javax.servlet</groupId>
     <artifactId>servlet-api</artifactId>
-    <version>3.0-alpha-1</version>
+    <version>2.5</version>
     <scope>provided</scope>
 </dependency>
+
 
 <dependency>
 	<groupId>com.excel.Sample</groupId>
