--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,12 @@
   	<dependencies>
 
 <dependency>
+    <groupId>org.apache.poi</groupId>
+    <artifactId>poi</artifactId>
+    <version>3.5-beta5</version>
+</dependency>
+
+<dependency>
     <groupId>commons-fileupload</groupId>
     <artifactId>commons-fileupload</artifactId>
     <version>1.3</version>
