--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,12 @@
     <artifactId>poi</artifactId>
     <version>3.5-beta5</version>
 </dependency>
+<dependency>
+    <groupId>javax.servlet</groupId>
+    <artifactId>servlet-api</artifactId>
+    <version>3.0-alpha-1</version>
+    <scope>provided</scope>
+</dependency>
 
 <dependency>
     <groupId>commons-fileupload</groupId>
