--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,35 @@
     <tomcat.version>8.5.23</tomcat.version>
   </properties>
   	<dependencies>
+  	  <dependency>
+	<groupId>org.apache.xmlbeans</groupId>
+	<artifactId>xmlbeans</artifactId>
+	<version>2.6.0</version>
+  </dependency>
+  <dependency>
+	<groupId>org.apache.poi</groupId>
+	<artifactId>poi-ooxml-schemas</artifactId>
+	<version>3.10-FINAL</version>
+  </dependency>
+  <dependency>
+	<groupId>dom4j</groupId>
+	<artifactId>dom4j</artifactId>
+	<version>1.6.1</version>
+  </dependency>
+<dependency>
+	<groupId>org.apache.poi</groupId>
+	<artifactId>poi-ooxml</artifactId>
+	<version>3.9</version>
+   </dependency>
+   
 
 <dependency>
     <groupId>org.apache.poi</groupId>
     <artifactId>poi</artifactId>
-    <version>3.5-beta5</version>
+    <version>3.10-FINAL</version>
 </dependency>
+
+
 <dependency>
     <groupId>javax.servlet</groupId>
     <artifactId>servlet-api</artifactId>
@@ -28,13 +51,13 @@
     <artifactId>commons-fileupload</artifactId>
     <version>1.3</version>
 </dependency>
-
   	
 <dependency>
     <groupId>com.google.code.gson</groupId>
     <artifactId>gson</artifactId>
     <version>2.3.1</version>
 </dependency>
+
 <dependency>
     <groupId>org.json</groupId>
     <artifactId>json</artifactId>
@@ -47,13 +70,14 @@
     <version>1.1</version>
     <scope>provided</scope>
 </dependency>
+
 <dependency>
     <groupId>org.postgresql</groupId>
     <artifactId>postgresql</artifactId>
     <version>9.3-1101-jdbc4</version>
 </dependency>
 
-		<dependency>
+	<dependency>
         <groupId>org.apache.tomcat.embed</groupId>
         <artifactId>tomcat-embed-core</artifactId>
         <version>${tomcat.version}</version>
