--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,7 +8,16 @@
         </session-timeout>
     </session-config>
     
-    
+    <servlet>
+		<servlet-name>WordDocumentApp</servlet-name>
+		<servlet-class>com.excel.Sample.Servlet.WordDocumentApp</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>WordDocumentApp</servlet-name>
+		<url-pattern>/WordDocumentApp</url-pattern>
+	</servlet-mapping>
+	
+	
   <servlet>
     <description></description>
     <display-name>ExcelSample</display-name>
