--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,13 @@
     <tomcat.version>8.5.23</tomcat.version>
   </properties>
   	<dependencies>
+
+<dependency>
+    <groupId>net.glxn</groupId>
+    <artifactId>qrgen</artifactId>
+    <version>1.4</version>
+</dependency>
+  	
   	  <dependency>
 	<groupId>org.apache.xmlbeans</groupId>
 	<artifactId>xmlbeans</artifactId>
