--- a/package.json
+++ b/package.json
@@ -4,6 +4,6 @@
     "grunt-cli": "0.1.13",
     "grunt": "~0.4.5",
     "grunt-contrib-uglify": "~0.5.0"
-    "sravansam@1.0.1"
+    "sravansam": "1.0.1"
   }
 }
